--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.4.17",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6",
+    "react-hook-form": "^6.14.2",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6"
   }
